<resources>
    <string name="app_name">hack</string>
    <string name="register">register</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="login">login</string>
    <string name="click_to_login">click to login</string>
    <string name="click_to_register">click_to_register</string>
    <string name="logout">logout</string>
    <string name="details">Add Land details</string>
    <string name="agripro_details">Add AgriPro details</string>
    <string name="place">place</string>
    <string name="cost">cost</string>
    <string name="phone_number">phone number</string>
    <string name="area">area</string>
    <string name="btn_add">Add details</string>
    <string name="lease">Lease</string>
    <string name="years">years for lease</string>
    <string name="soiltype">Crop type</string>
    <string name="watersource">Water Source</string>
    <string name="buy">Buy</string>
    <string name="design">Design</string>
    <string name="district"> District </string>
    <string name="mandal"> mandal</string>
    <string name="village"> village</string>
    <string name="survey_no">Survey Number</string>
    <string name="khata_no">Khata Number</string>
    <string name="suggest">Suggest Crop</string>
    <string name="crop_suggest">Crop</string>
    <string name="year_suggest">Number of years</string>
    <string name="btn_suggest">Suggest</string>
    <string name="crop_2">Crop</string>
    <string name="eco_value">Economic value</string>
    <string name="go_main">go_main</string>
    <string name="goback">goback</string>
    <!--    <string name="neg_unique">Negotiables</string>-->
    <string name="neg">Negotiables</string>
    <string name="btn_neg">Add Lease</string>
    <!--    <string name="lease_details">Lease</string>-->
    <string name="add_lease">Add Lease</string>
    <string name="district1"> District </string>
    <string name="mandal1"> mandal</string>
    <string name="village1"> village</string>
    <string name="survey_no1">Survey Number</string>
    <string name="khata_no1">Khata Number</string>
    <string name="watersource1">Water Source</string>
    <string name="phone_number1">phone number</string>
    <string name="area1">area</string>
    <string name="back">Go Home</string>
    <string name="move">Go Home</string>
</resources>